--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="photo_tags_text">%1$s %2$s %3$s</string>-->
     <string name="activity_search">Search</string>
     <string name="searchable_hint">Enter photo tags</string>
+    <string name="empty_photo">No photos match your search.   Use the search icon to search for photos</string>
 
 </resources>
