--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="empty_photo">No photos match your search.   Use the search icon to search for photos</string>
     <string name="title_activity_upload">UploadActivity</string>
     <string name="action_upload">Upload</string>
+    <string name="sendEditInfo">sendEditInfo</string>
 
     <item name="imgPic" type="id">uploadPic</item>
     <item name="upload_button" type="id">uploadButton</item>
